improvement of application + New deploy in firebase

--- a/FrontEnd/src/app/feed/post/crpost/crpost.page.html
+++ b/FrontEnd/src/app/feed/post/crpost/crpost.page.html
@@ -78,9 +78,9 @@
                                             </ion-row>
                                             <ion-row>
                                                 <ion-col size="12">
-                                                    <!-- <ion-input class="imgup" formControlName="url" type="text" placeholder="Image URL!"></ion-input> -->
-                                                    <input #imageInput type="file" (change)="imageInputChange(imageInput)" accept="image/*">
-                                                    <!-- <button mat-raised-button color="primary" (click)="addImage()">Add Image</button> -->
+                                                    <div class="imgup ion-align-items-center ion-padding">
+                                                        <input #imageInput type="file" (change)="imageInputChange(imageInput)" accept="image/*">
+                                                    </div>
                                                 </ion-col>
                                             </ion-row>
                                             <ion-row>
