--- a/FrontEnd/src/app/feed/post/post.page.html
+++ b/FrontEnd/src/app/feed/post/post.page.html
@@ -72,7 +72,7 @@
                                                         </ion-row>
                                                         <ion-row>
                                                             <ion-col offset="2" size="8">
-                                                                <ion-button (click)="joinEvent()" [disabled]="joined" class="postbtn" expand="block" fill="clear">
+                                                                <ion-button (click)="joinTopic()" [disabled]="joined" class="postbtn" expand="block" fill="clear">
                                                                     {{joinbtn}}
                                                                 </ion-button>
                                                             </ion-col>
