--- a/FrontEnd/src/app/home/home.page.scss
+++ b/FrontEnd/src/app/home/home.page.scss
@@ -117,3 +117,11 @@ h6.topiclink {
 img.thumbnail {
     border-radius: 50%;
 }
+
+.about {
+    background-color: #dd4e35;
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #fff;
+}
