--- a/FrontEnd/src/app/layout/header/header.component.scss
+++ b/FrontEnd/src/app/layout/header/header.component.scss
@@ -87,3 +87,8 @@ ion-icon.forumicon {
     float: left;
     transform: translateY(-10%);
 }
+
+ion-searchbar {
+    width: 40%;
+    float: right;
+}
