--- a/FrontEnd/src/app/home/home.page.html
+++ b/FrontEnd/src/app/home/home.page.html
@@ -15,7 +15,7 @@
                 <ion-grid fixed>
                     <ion-row>
                         <ion-col>
-                            <ng-container *ngFor="let post of listOfPosts">
+                            <ng-container *ngFor="let post of listOfPosts; let ind = index">
                                 <ion-card>
                                     <ion-grid fixed>
                                         <ion-row>
@@ -34,6 +34,9 @@
                                             </ion-col>
                                             <ion-col size="2" *ngIf="post.type == 2">
                                                 <img class="thumbnail" src="../../../assets/event-invitation-redimg.jpg" />
+                                            </ion-col>
+                                            <ion-col size="2" *ngIf="post.type == 0">
+                                                <img [attr.src]="getImageURL(ind)" alt="Cannot load" />
                                             </ion-col>
                                         </ion-row>
                                     </ion-grid>
