--- a/FrontEnd/src/app/user-page/user-page.page.html
+++ b/FrontEnd/src/app/user-page/user-page.page.html
@@ -36,6 +36,9 @@
                                     <ion-col size="2" *ngIf="post.type == 2">
                                         <img class="thumbnail" src="../../../assets/event-invitation-redimg.jpg" />
                                     </ion-col>
+                                    <ion-col size="2" *ngIf="post.type == 0">
+                                        <img [attr.src]="getImageURL(ind)" alt="Not found" />
+                                    </ion-col>
                                 </ion-row>
                             </ion-grid>
                         </ion-card>
